# coati

./: .clang-format-ignore  .clang-format-include  .clang-tidy  .clang-tidy-ignore  .codecov.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  coati.sublime-project.in  gcovr.cfg  meson.build  meson_options.txt
.circleci/: config.yml
.github/workflows/: build-test.yml  check-format.yml  clang-tidy.yml  cmake.yml  coverage.yml  meson.yml  tidy.yml
benchmark/: benchmark-list-wrapper.sh  benchmark_main.cc  benchmark_main.cc.in  fasta.tcc  libcoati-benchmark-tests.txt  meson.build
benchmark/data/: benchmark_156.fasta  benchmark_16k.fasta  benchmark_1k.fasta  benchmark_2k.fasta  benchmark_32k.fasta  benchmark_4k.fasta  benchmark_8k.fasta
conf/: configure.cmake  cppcheck_suppressions.txt  devopt.cmake  discover_tests.sh  discover_tests_include.sh  gitmeta.cmake  meson.build  rpath.cmake  semver.cmake
contrib/: CMakeLists.txt  eigen.wrap  meson.build
contrib/fstlib/fst/: bi-table.h  fst.h  log.h  replace.h  shortest-distance.h  symbol-table.h
contrib/minionrng/: minion.cc  minion.hpp
contrib/random/: random.cpp  random.hpp
coverage/: CMakeLists.txt  lcov.bash
doc/: Doxyfile.in  developer.md  developer_notes.txt  meson.build
fasta/: example-001.fasta  example-002.fasta  example-20k.fasta  example-40k.fasta  example-80k.fasta
fst/: dna_marg.fst  dna_syms.txt  indel.fst  marg_pos.fst  mutation.fst  nuc_syms.txt
modules/: FindClangFormat.cmake  FindClangTidy.cmake  FindCppcheck.cmake  FindFSTLIB.cmake  FindFst.cmake  FindGcovr.cmake
newick/: example-msa-001.newick
sampledata/: example-003.fasta  example-10k.fasta  example-160k.fasta  example-msa-001.fasta  example-msa-002.fasta  example-msa-002.newick  example-msa-003.fasta  example-msa-003.newick
scripts/: acceptor.R  fasta.R  indel.R  marg_mutation.R  mutation.R
src/: CMakeLists.txt  coati-alignpair.cc  coati-doctest.cc.in  coati-format.cc  coati-genseed.cc  coati-msa.cc  coati-sample.cc  coati-version.cc  coati.cc.in  main.cc  main.cpp  meson.build  verb.hpp  version.h.in  version.h.in.in
src/include/: meson.build
src/include/coati/: align.hpp  align_fst.hpp  align_marginal.hpp  align_msa.hpp  align_pair.hpp  coati.hpp  data.hpp  dna_syms.hpp  ecm.tcc  ecm_unrest.tcc  eigen_matrix.hpp  fasta.hpp  format.hpp  gotoh.hpp  insertions.hpp  io.hpp  json.hpp  matrix.hpp  matrix_decl.hpp  mg94p.tcc  mg94q.tcc  mut_models.h  mut_models.hpp  mutation_coati.hpp  mutation_ecm.hpp  mutation_fst.hpp  optimize.h  phylip.hpp  profile_aln.hpp  semiring.hpp  structs.hpp  tree.hpp  utils.h  utils.hpp
src/lib/: CMakeLists.txt  align.cc  align_fst.cc  align_marginal.cc  align_msa.cc  align_pair.cc  fasta.cc  format.cc  gotoh.cc  insertions.cc  io.cc  json.cc  meson.build  mut_models.cc  mut_models.cpp  mutation_coati.cc  mutation_ecm.cc  mutation_fst.cc  optimize.cc  optimize.h  phylip.cc  profile_aln.cc  tree.cc  utils.cc  utils.cpp  version.cc
subprojects/: google-benchmark.wrap  json.wrap  meson.build
subprojects/doctest/: meson.build
subprojects/fstlib/: meson.build
subprojects/fstlib/fst/: float-weight.h  fst.h  relabel.h
subprojects/minionrng/: meson.build
tests/: CMakeLists.txt  doctest-list-wrapper.sh  libcoati-doctest-tests.txt  libcoati-doctest.cc  meson.build
