# MIT License
# Copyright (c) 2020 Reed A. Cartwright <reed@cartwrig.ht>
# Copyright (c) 2021 Juan J. Garcia Mesa <juanjosegarciamesa@gmail.com>
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# doctest_lib = library('doctest', 'INTERFACE')
# doctest::doctest_lib = library('doctest::doctest', 'ALIAS', 'doctest')
# # target_include_directories(['doctest', 'INTERFACE', '${CMAKE_CURRENT_SOURCE_DIR}/doctest'])
# minionrng_lib = static_library('minionrng', 'minionrng/minion.cc')
# minionrng::minionrng_lib = library('minionrng::minionrng', 'ALIAS', 'minionrng')
# # target_include_directories(['minionrng', 'PUBLIC', '${CMAKE_CURRENT_SOURCE_DIR}/minionrng'])
# fstlib_sources = ['compat.cc', 'encode.cc', 'flags.cc', 'fst.cc', 'fst-types.cc', 'mapped-file.cc', 'properties.cc', 'symbol-table.cc', 'symbol-table-ops.cc', 'util.cc', 'weight.cc']
# fstlib_headers = '${CMAKE_CURRENT_SOURCE_DIR}/fstlib/fst/fstlib.h'
# # foreach(['source', 'IN', 'LISTS', 'fstlib_sources'])
# # list(['APPEND', 'fstlib_sources_', '${CMAKE_CURRENT_SOURCE_DIR}/fstlib/${source}'])
# # endforeach()
# fstlib_sources = fstlib_sources_
# fst_lib = static_library('fst', fstlib_sources, fstlib_headers)
# FSTLIB::fst_lib = library('FSTLIB::fst', 'ALIAS', 'fst')
# # target_include_directories(['fst', 'PUBLIC', '${CMAKE_CURRENT_SOURCE_DIR}/fstlib'])
