install_headers('coati/align.hpp', 'coati/dna_syms.hpp', 'coati/gotoh.hpp',
                'coati/matrix.hpp', 'coati/mg94q.tcc', 'coati/mutation_ecm.hpp',
                'coati/tree.hpp', 'coati/coati.hpp', 'coati/ecm.tcc',
                'coati/insertions.hpp', 'coati/mg94p.tcc',
                'coati/mutation_coati.hpp', 'coatimutation_fst.hpp',
                'coati/utils.hpp')
